[package]
name = "plumpen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
libsql = "0.6.0"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tokio = "1.26.0"
tracing = "0.1.37"
warp = "0.3.7"
